[package]
name = "portforward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
iced = {version = "0.12.1",features = ["tokio","multi-window","image"]}
k8s-openapi ={version = "0.22.0",features = ["earliest"]}
kube = {version = "0.91.0",features = ["client","ws"]}
once_cell = "1.19.0"
thiserror = "1.0.61"
tokio = {version = "1.37.0",features = ["full"]}
tokio-stream = {version = "0.1.15",features = ["net"]}


[build-dependencies]
built = { version = "0.7", features = ["chrono", "git2"], optional = true }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
static_vcruntime = "2"